# contactapi

./: .dockerignore  .gitignore  Dockerfile  README.md  con.py  pyproject.toml  requirements.txt
.github/: ci.yml
.github/workflows/: ci.yml  docker-image.yml  pypi-upload.yml  upload-docker-image.yml
contactapi/: __init__.py  __main__.py  config.py  crud.py  main.py  models.py  router.py  schemas.py
src/: __main__.py  config.py  main.py  models.py  router.py  schemas.py
workflows/: ci.yml  ssh.yaml
